[gd_scene load_steps=3 format=3 uid="uid://bjwmad464nsia"]

[ext_resource type="Texture2D" uid="uid://jnlicp21qgia" path="res://assets/Frame.png" id="1_clqx4"]
[ext_resource type="Script" uid="uid://8j1kcspc7xnr" path="res://scenes/ui/player_objects.gd" id="1_o1bg4"]

[node name="PlayerObjects" type="Control"]
layout_mode = 3
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -40.0
offset_right = 40.0
grow_vertical = 0
script = ExtResource("1_o1bg4")

[node name="Item2" type="TextureRect" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(128, 128)
layout_mode = 0
offset_left = -70.0
offset_top = -265.0
offset_right = 58.0
offset_bottom = -137.0
scale = Vector2(3, 3)
texture = ExtResource("1_clqx4")
expand_mode = 1

[node name="Item1" type="TextureRect" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(128, 128)
layout_mode = 0
offset_left = 56.0
offset_top = -145.0
offset_right = 184.0
offset_bottom = -17.0
expand_mode = 1
